Создал файл (Index.html)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
@@ -15,11 +15,10 @@
         <div class="container header__container">
             <nav class="header__navbar navbar">
                 <menu class="navbar__list">
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Архитектура сайтов</a></li>
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Теги HTML</a></li>
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Атрибуты</a></li>
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Клиент-серверный сайт</a></li>
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">SPA сайта</a></li>
+                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Главная</a></li>
+                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Настройки</a></li>
+                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Возможности</a></li>
+                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Войти</a></li>
                 </menu>
             </nav>
         </div>
@@ -28,36 +27,55 @@
         <section class="main__section architecture">
             <div class="container architecture__container">
                 <div class="architecture__wrapper">
-                    <h2 class="architecture__title title">Архитектура сайтов</h2>
-                    <p class="architecture__text text">Структура страниц и их взаимосвязь, которая помогает пользователям ориентироваться на странице.</p>
+                    <h2 class="architecture__title title">Определение</h2>
+                    <p class="architecture__text text">GitHub — крупнейший веб-сервис для хостинга IT-проектов и их совместной разработки.</p>
                 </div>
             </div>
         </section>
         <section class="main__section tegs">
             <div class="container tegs__container">
                 <div class="tegs__wrapper">
-                    <h2 class="tegs__title title">Теги</h2>
-                    <p class="tegs__text text">Команды, которые используются для описания содержимого веб-страницы. Они применяются для создания элементов на веб-странице, таких как заголовки, абзацы, изображения, ссылки и многое другое. Каждый тег начинается с символа и заканчивается символом «>».</p>
+                    <h2 class="tegs__title title">С помощью GitHub разработчики могут:</h2>
+                    <p class="tegs__text text">- настраивать свой проект для удаленной работы с другими программистами; <br>
+                        - публиковать результаты разработки и показывать их другим пользователям; <br>
+                        - находить и разбирать open-source-проекты, чтобы научиться новому; <br>                     
+                        - общаться с другими разработчиками, находить единомышленников.</p>
                 </div>
             </div>
         </section>
         <section class="main__section tegs">
             <div class="container tegs__container">
                 <div class="tegs__wrapper">
-                    <h2 class="tegs__title title">Атрибуты</h2>
-                    <p class="tegs__text text">Свойство или характеристика, которая определяет объект или субъект и позволяет описать его особенности или состояние.</p>
+                    <h2 class="tegs__title title">На что основан gitHub</h2>
+                    <p class="tegs__text text">Веб-сервис основан на системе контроля версий Git и разработан на Ruby on Rails и Erlang компанией Github, Inc.</p>
                 </div>
             </div>
         </section>
         <section class="main__section tegs">
             <div class="container tegs__container">
                 <div class="tegs__wrapper">
-                    <h2 class="tegs__title title">Клиент-серверный сайт</h2>
-                    <p class="tegs__text text">Сайт, который работает на сервере, а его пользователи являются клиентами.</p>
+                    <h2 class="tegs__title title">Для чего нужна программа GitHub</h2>
+                    <p class="tegs__text text">Это platform, где можно хранить, делиться и работать вместе с другими пользователями для написания кода</p>
                 </div>
             </div>
         </section>
         <section class="main__section tegs">
+            <div class="container tegs__container">
+                <div class="tegs__wrapper">
+                    <h2 class="tegs__title title">SPA сайта</h2>
+                    <p class="tegs__text text">Single Page Application (SPA) — это веб-приложение или веб-сайт, который загружает только одну HTML-страницу и динамически обновляет её содержимое без необходимости полной перезагрузки страницы при взаимодействии с пользователем.</p>
+                </div>
+            </div>
+        </section>
+        <section class="main__section tegs"></section>
+            <div class="container tegs__container">
+                <div class="tegs__wrapper">
+                    <h2 class="tegs__title title">SPA сайта</h2>
+                    <p class="tegs__text text">Single Page Application (SPA) — это веб-приложение или веб-сайт, который загружает только одну HTML-страницу и динамически обновляет её содержимое без необходимости полной перезагрузки страницы при взаимодействии с пользователем.</p>
+                </div>
+            </div>
+        </section>
+        <section class="main__section tegs"></section>
             <div class="container tegs__container">
                 <div class="tegs__wrapper">
                     <h2 class="tegs__title title">SPA сайта</h2>
@@ -71,11 +89,10 @@
             <nav class="footer__navbar navbar">
                 <h2 class="footer__title title">Footer</h2>
                 <menu class="navbar__list">
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Архитектура сайтов</a></li>
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Теги HTML</a></li>
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Атрибуты</a></li>
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Клиент-серверный сайт</a></li>
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">SPA сайта</a></li>
+                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Главная</a></li>
+                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Настройки</a></li>
+                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Возможности</a></li>
+                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Войти</a></li>
                 </menu>
             </nav>
         </div>
