--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Главная</a></li>
                     <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Настройки</a></li>
                     <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Возможности</a></li>
+                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Gitbash</a></li>
                     <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Войти</a></li>
                 </menu>
             </nav>
@@ -59,27 +60,27 @@
                 </div>
             </div>
         </section>
-        <section class="main__section tegs">
-            <div class="container tegs__container">
-                <div class="tegs__wrapper">
-                    <h2 class="tegs__title title">SPA сайта</h2>
-                    <p class="tegs__text text">Single Page Application (SPA) — это веб-приложение или веб-сайт, который загружает только одну HTML-страницу и динамически обновляет её содержимое без необходимости полной перезагрузки страницы при взаимодействии с пользователем.</p>
+        <section class="main__section functions">
+            <div class="container functions__container">
+                <div class="functions__wrapper">
+                    <h2 class="functions__title title">Какие функции выполняет сервис GitHub</h2>
+                    <p class="functions__text text">Участникам, кроме непосредственного хранения кода, своих проектов, можно общаться, комментировать изменения друг друга, отслеживать новости знакомых. У программистов есть возможность объединять репозитории и выводить вклад участника в виде дерева.</p>
                 </div>
             </div>
         </section>
         <section class="main__section tegs"></section>
             <div class="container tegs__container">
                 <div class="tegs__wrapper">
-                    <h2 class="tegs__title title">SPA сайта</h2>
-                    <p class="tegs__text text">Single Page Application (SPA) — это веб-приложение или веб-сайт, который загружает только одну HTML-страницу и динамически обновляет её содержимое без необходимости полной перезагрузки страницы при взаимодействии с пользователем.</p>
+                    <h2 class="tegs__title title">Как появился GitHub</h2>
+                    <p class="tegs__text text">Разработка платформы GitHub началась 19.11.2007. Сайт был запущен в апреле 2008 года Томом Престоном-Венером, Крисом Уонстратом, П.Дж. Хайеттом и Скоттом Чаконом после того, как он был доступен в течение нескольких месяцкв в качестве бета-версии</p>
                 </div>
             </div>
         </section>
-        <section class="main__section tegs"></section>
-            <div class="container tegs__container">
-                <div class="tegs__wrapper">
-                    <h2 class="tegs__title title">SPA сайта</h2>
-                    <p class="tegs__text text">Single Page Application (SPA) — это веб-приложение или веб-сайт, который загружает только одну HTML-страницу и динамически обновляет её содержимое без необходимости полной перезагрузки страницы при взаимодействии с пользователем.</p>
+        <section class="main__section repositories"></section>
+            <div class="container repositories__container">
+                <div class="repositories__wrapper">
+                    <h2 class="repositories__title title">Репозитории Github</h2>
+                    <p class="repositories__text text">- Источники платной работы для авторов <br> - Создание собственного X проекта <br> - OSSU Computer Science <br> - Awesome Python <br> - Пособие по техническому собеседованию <br> - Слайды HTML</p>
                 </div>
             </div>
         </section>
@@ -92,6 +93,7 @@
                     <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Главная</a></li>
                     <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Настройки</a></li>
                     <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Возможности</a></li>
+                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Gitbash</a></li>
                     <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Войти</a></li>
                 </menu>
             </nav>
