Создал файл (Index.html)

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <section class="main__section tegs">
             <div class="container tegs__container">
                 <div class="tegs__wrapper">
-                    <h2 class="tegs__title title">Для чего нужна программа GitHub</h2>
-                    <p class="tegs__text text">Это platform, где можно хранить, делиться и работать вместе с другими пользователями для написания кода</p>
+                    <h2 class="tegs__title title">Аналоги GitHub</h2>
+                    <p class="tegs__text text">- GitLab; - BitBucket; - ScourgeForge; - Launchpad; <br> -Apache Allura; - Cloud Source; - AWS CodeCommit; - FogCreek/DevHub</p>
                 </div>
             </div>
         </section>
