Создал файл (Index.html)

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <main class="main">
         <section class="main__section architecture">
             <div class="container architecture__container">
+                <img src="art/25231.png" alt="#" class="architecture__picture">
                 <div class="architecture__wrapper">
                     <h2 class="architecture__title title">Определение</h2>
                     <p class="architecture__text text">GitHub — крупнейший веб-сервис для хостинга IT-проектов и их совместной разработки.</p>
@@ -91,10 +92,8 @@
                 <h2 class="footer__title title">Footer</h2>
                 <menu class="navbar__list">
                     <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Главная</a></li>
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Настройки</a></li>
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Возможности</a></li>
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Gitbash</a></li>
-                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Войти</a></li>
+                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Сообщите нам</a></li>
+                    <li class="navbar__listItem"><a href="#!" class="navbar__listLink">Регистрация</a></li>
                 </menu>
             </nav>
         </div>
