Создал файл (Index.html)

--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                 </div>
             </div>
         </section>
-        <section class="main__section tegs"></section>
-            <div class="container tegs__container">
-                <div class="tegs__wrapper">
-                    <h2 class="tegs__title title">Как появился GitHub</h2>
-                    <p class="tegs__text text">Разработка платформы GitHub началась 19.11.2007. Сайт был запущен в апреле 2008 года Томом Престоном-Венером, Крисом Уонстратом, П.Дж. Хайеттом и Скоттом Чаконом после того, как он был доступен в течение нескольких месяцкв в качестве бета-версии</p>
+        <section class="main__section creation"></section>
+            <div class="container creation__container">
+                <div class="creation__wrapper">
+                    <p class="creation__text text">Разработка платформы GitHub началась 19.11.2007. Сайт был запущен в апреле 2008 года Томом Престоном-Венером, Крисом Уонстратом, П.Дж. Хайеттом и Скоттом Чаконом после того, как он был доступен в течение нескольких месяцкв в качестве бета-версии</p>
+                    <h2 class="creation__title title">Как появился GitHub</h2>
                 </div>
             </div>
         </section>
