Создал файл (Index.html)

--- a/index.html
+++ b/index.html
@@ -34,15 +34,16 @@
                 </div>
             </div>
         </section>
-        <section class="main__section tegs">
-            <div class="container tegs__container">
-                <div class="tegs__wrapper">
-                    <h2 class="tegs__title title">С помощью GitHub разработчики могут:</h2>
-                    <p class="tegs__text text">- настраивать свой проект для удаленной работы с другими программистами; <br>
+        <section class="main__section creators">
+            <div class="container creators__container">
+                <div class="creators__wrapper">
+                    <h2 class="creators__title title">С помощью GitHub разработчики могут:</h2>
+                    <p class="creators__text text">- настраивать свой проект для удаленной работы с другими программистами; <br>
                         - публиковать результаты разработки и показывать их другим пользователям; <br>
                         - находить и разбирать open-source-проекты, чтобы научиться новому; <br>                     
                         - общаться с другими разработчиками, находить единомышленников.</p>
                 </div>
+                <img src="art/754436415879347.jpg" alt="#" class="creators__picture">
             </div>
         </section>
         <section class="main__section tegs">
@@ -53,11 +54,18 @@
                 </div>
             </div>
         </section>
-        <section class="main__section tegs">
-            <div class="container tegs__container">
-                <div class="tegs__wrapper">
-                    <h2 class="tegs__title title">Аналоги GitHub</h2>
-                    <p class="tegs__text text">- GitLab; - BitBucket; - ScourgeForge; - Launchpad; <br> -Apache Allura; - Cloud Source; - AWS CodeCommit; - FogCreek/DevHub</p>
+        <section class="main__section analogs">
+            <div class="container analogs__container">
+                <div class="analogs__wrapper">
+                    <h2 class="analogs__title title">Аналоги GitHub</h2>
+                    <p class="analogs__text text">- GitLab — это инструмент для хранения и управления репозиториями Git. Он дает возможность выполнять совместную разработку силами нескольких команд, применять обновления кода и откатывать изменения, если это необходимо. Решение может работать на собственном сервере или в облаке; <br>
+                        <br> - Bitbucket Cloud — это инструмент для хостинга кода и совместной работы на основе Git, предназначенный для команд. Лучшие в своем классе интеграции Jira и Trello для Bitbucket создают для всей команды разработчиков единое пространство, в котором ее участники вместе работают над проектом; <br>
+                        <br>- SourceForge — система совместной разработки компьютерных программ. Программное обеспечение SourceForge разрабатывается и продаётся компанией CollabNet. Один из самых больших в мире веб-сайтов для разработчиков открытого программного обеспечения; <br>
+                        <br> - launch pad — пусковая платформа, стартовая платформа — веб-сайт с системой совместной разработки программного обеспечения, разрабатываемый и обслуживаемый компанией Canonical;  <br>
+                        <br> - Apache Allura — это программное обеспечение с открытым исходным кодом для управления репозиториями исходного кода, отчетами об ошибках, обсуждениями, вики-страницами, блогами и многим другим для любого количества отдельных проектов; <br>
+                        <br> - Cloud Source — это хостинг проектов, который, по задумке компании, должен найти своё место на одной площадке с другими «облачными» сервисами Google; <br>
+                        <br> - AWS CodeCommit — это безопасная, хорошо масштабируемая, полностью управляемая служба контроля версий, в которой размещаются частные репозитории Git;  <br>
+                        <br>- DevHub — это программа, которая позволяет вам создавать скретч-организации, разблокированные пакеты и управляемые пакеты второго поколения</p>
                 </div>
             </div>
         </section>
@@ -74,6 +82,7 @@
                 <div class="creation__wrapper">
                     <p class="creation__text text">Разработка платформы GitHub началась 19.11.2007. Сайт был запущен в апреле 2008 года Томом Престоном-Венером, Крисом Уонстратом, П.Дж. Хайеттом и Скоттом Чаконом после того, как он был доступен в течение нескольких месяцкв в качестве бета-версии</p>
                     <h2 class="creation__title title">Как появился GitHub</h2>
+                    <img src="art/Git-Icon-1788C.png" alt="#" class="creation__picture">
                 </div>
             </div>
         </section>
@@ -82,6 +91,7 @@
                 <div class="repositories__wrapper">
                     <h2 class="repositories__title title">Репозитории Github</h2>
                     <p class="repositories__text text">- Источники платной работы для авторов <br> - Создание собственного X проекта <br> - OSSU Computer Science <br> - Awesome Python <br> - Пособие по техническому собеседованию <br> - Слайды HTML</p>
+                    <img src="art/git-bash.svg" alt="#" class="repositories__picture">
                 </div>
             </div>
         </section>
